Set a min-height to prefered service adding form to prevent "jumping" effect on filtering results

--- a/src/components/AddPreferedServiceForm/AddPreferedServiceForm.scss
+++ b/src/components/AddPreferedServiceForm/AddPreferedServiceForm.scss
@@ -1,3 +1,4 @@
 .aposto-form {
   margin-top: 16px;
+  min-height: 360px;
 }
